--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ env:
     - CONTAINER_NAME="mcas-build-fedora27"
       DOCKERIMG="fedora:27" 
       BOOTSTRAP_FILE="./install-yum-fc27.sh"
-#      HOSTMODULE="-v /lib/modules:/lib/modules:ro -v /usr/src:/usr/src:ro"
+      HOSTMODULE="-v /lib/modules:/lib/modules:ro -v /usr/src:/usr/src:ro"
     - CONTAINER_NAME="mcas-build-ubuntu1604"
       DOCKERIMG="ubuntu:16.04"  
       BOOTSTRAP_FILE="./install-apts-ubuntu-16.sh"
@@ -45,9 +45,10 @@ before_install:
   - docker ps
   - docker exec -t ${CONTAINER_NAME} bash  -c "
     cd /travis/deps;
- #   ./install-tzdata-noninteractive.sh ;
+    ./install-tzdata-noninteractive.sh ;
     ${BOOTSTRAP_FILE};"
 
+# note: limit job number to 2 to avoid out-of-memory for rocksdb build
 script:
   - docker exec -t ${CONTAINER_NAME} bash -c "
     cd /travis ;
