--- a/examples/cpp_basic/CMakeLists.txt
+++ b/examples/cpp_basic/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required (VERSION 3.5.1 FATAL_ERROR)
 
-
 project(example-cpp-basic CXX)
+
+set(CMAKE_CXX_STANDARD 14)
 
 add_definitions(${GCC_COVERAGE_COMPILE_FLAGS} -DCONFIG_DEBUG)
 
