--- a/src/components/store/hstore/CMakeLists.txt
+++ b/src/components/store/hstore/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(./unit_test)
 
 add_definitions(-DCONFIG_DEBUG) # P{LOG,DEG,INF,WRN,ERR} control
 add_definitions(-DDM_REGION_LOG_GRAIN_SIZE=${DM_REGION_LOG_GRAIN_SIZE})
+add_definitions(-DMCAS_HSTORE_USE_PMEM_PERSIST=1)
 
 set(SOURCES
 	src/allocator_cc.cpp
@@ -136,35 +137,35 @@ set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined")
 # common version
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 target_compile_options(${PROJECT_NAME} PUBLIC "-fPIC" "$<$<BOOL:${TEST_HSTORE_PERISHABLE}>:-DMCAS_HSTORE_TEST_PERISHABLE=1>")
-target_link_libraries(${PROJECT_NAME} common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm gcov)
+target_link_libraries(${PROJECT_NAME} common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm pmem gcov)
 add_dependencies(${PROJECT_NAME} common nupm)
 set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}:${CMAKE_INSTALL_PREFIX}/lib)
 
 # no timestamp version
 add_library(${PROJECT_NAME}-nt SHARED ${SOURCES})
 target_compile_options(${PROJECT_NAME}-nt PUBLIC "-fPIC" "$<$<BOOL:${TEST_HSTORE_PERISHABLE}>:-DMCAS_HSTORE_TEST_PERISHABLE=1>" "-DENABLE_TIMESTAMP=0")
-target_link_libraries(${PROJECT_NAME}-nt common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm)
+target_link_libraries(${PROJECT_NAME}-nt common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm pmem)
 add_dependencies(${PROJECT_NAME}-nt common nupm)
 set_target_properties(${PROJECT_NAME}-nt PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}:${CMAKE_INSTALL_PREFIX}/lib)
 
 # crash-consistent allocator version
 add_library(${PROJECT_NAME}-cc SHARED ${SOURCES})
 target_compile_options(${PROJECT_NAME}-cc PUBLIC "-fPIC" "$<$<BOOL:${TEST_HSTORE_PERISHABLE}>:-DMCAS_HSTORE_TEST_PERISHABLE=1>" "-DMCAS_HSTORE_USE_CC_HEAP=4")
-target_link_libraries(${PROJECT_NAME}-cc common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm)
+target_link_libraries(${PROJECT_NAME}-cc common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm pmem)
 add_dependencies(${PROJECT_NAME}-cc common nupm)
 set_target_properties(${PROJECT_NAME}-cc PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}:${CMAKE_INSTALL_PREFIX}/lib)
 
 # crash-consistent with perishable expiry
 add_library(${PROJECT_NAME}-cc-pe SHARED ${SOURCES})
 target_compile_options(${PROJECT_NAME}-cc-pe PUBLIC "-fPIC" "-DMCAS_HSTORE_TEST_PERISHABLE=1" "-DMCAS_HSTORE_USE_CC_HEAP=4")
-target_link_libraries(${PROJECT_NAME}-cc-pe common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm)
+target_link_libraries(${PROJECT_NAME}-cc-pe common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm pmem)
 add_dependencies(${PROJECT_NAME}-cc-pe common nupm)
 set_target_properties(${PROJECT_NAME}-cc-pe PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}:${CMAKE_INSTALL_PREFIX}/lib)
 
 # test that all trace options compile
 add_library(${PROJECT_NAME}-cc-pe-tr SHARED ${SOURCES})
 target_compile_options(${PROJECT_NAME}-cc-pe-tr PUBLIC "-fPIC" "-DMCAS_HSTORE_TEST_PERISHABLE=1" "-DMCAS_HSTORE_USE_CC_HEAP=4" "-DHSTORE_TRACE_ALL=1")
-target_link_libraries(${PROJECT_NAME}-cc-pe-tr common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm)
+target_link_libraries(${PROJECT_NAME}-cc-pe-tr common pthread numa dl rt boost_system boost_filesystem tbb nupm cityhash ccpm pmem)
 add_dependencies(${PROJECT_NAME}-cc-pe-tr common nupm)
 set_target_properties(${PROJECT_NAME}-cc-pe-tr PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}:${CMAKE_INSTALL_PREFIX}/lib)
 
