--- a/src/components/index/rbtree/CMakeLists.txt
+++ b/src/components/index/rbtree/CMakeLists.txt
@@ -9,6 +9,7 @@ include(../../../../mk/clang-dev-tools.cmake)
 add_subdirectory(./unit_test)
 
 include_directories(../../../lib/common/include/)
+include_directories(../../../lib/GSL/include)
 include_directories(../../)
 
 enable_language(CXX C ASM)
