kvstore-perf: allow specified "report_tag" to replace timestamp in JSON result filename

--- a/src/apps/kvstore-perf/CMakeLists.txt
+++ b/src/apps/kvstore-perf/CMakeLists.txt
@@ -5,6 +5,7 @@ execute_process( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTUR
 project (kvstore-perf)
 
 add_subdirectory(unit_test)
+add_compile_options(-Weffc++)
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
   set(GTEST_LIB gtest)
