hstore: attempt to fix dvdax secondary region ID generation

--- a/src/components/store/hstore/CMakeLists.txt
+++ b/src/components/store/hstore/CMakeLists.txt
@@ -90,6 +90,7 @@ set(SOURCES
 	src/as_emplace.cpp
 	src/as_extend.cpp
 	src/dax_manager.cpp
+	src/heap.cpp
 	src/heap_cc.cpp
 	src/heap_cc_ephemeral.cpp
 	src/heap_rc.cpp
