libfabric: add note on building fabtests for mcas

--- a/src/lib/libfabric/CMakeLists.txt
+++ b/src/lib/libfabric/CMakeLists.txt
@@ -14,3 +14,11 @@ ExternalProject_Add(libfabric
   BUILD_COMMAND make
   INSTALL_COMMAND make install
   )
+
+# Notes on building fabtest
+#  cd src/lib/libfabric/libfabric-prefix/src/libfabric/fabtests
+#  # in configure.ac, 'test -d $withval/lib64' is wrong for mcas: there is a lib64, but libfabric is not there.
+#  sed -i 's?-d $withval/lib64?-f $withval/lib64/libfabric.so?' configure.ac
+#  ./autogen.sh
+#  ./configure --prefix=/home/clem/e/sv/debug/dist --with-libfabric=/home/clem/e/sv/debug/dist --enable-debug
+#  make && make install
